css/custom.css
/* ... */
.achilles-laboratory,
.achilles-laboratory:active {
    background-image: url('../images/icons/labor.png');
}

.achilles-laboratory.empty,
.achilles-laboratory.empty:active {
    background-image: url('../images/icons/labor_g.png');
}

.achilles-document,
.achilles-document:active {
    background-image: url('../images/icons/dokumente.png');
}

.achilles-document.empty,
.achilles-document.empty:active {
    background-image: url('../images/icons/dokumente_g.png');
}

.achilles-auf,
.achilles-auf:active {
    background-image: url('../images/icons/auf.png');
}

.achilles-auf.empty,
.achilles-auf.empty:active {
    background-image: url('../images/icons/auf_g.png');
}

.achilles-biometric,
.achilles-biometric:active {
    background-image: url('../images/icons/biodaten.png');
}

.achilles-biometric.empty,
.achilles-biometric.empty:active {
    background-image: url('../images/icons/biodaten_g.png');
}

.achilles-benefit,
.achilles-benefit:active {
    background-image: url('../images/icons/leistung.png');
}

.achilles-benefit.empty,
.achilles-benefit.empty:active {
    background-image: url('../images/icons/leistung_g.png');
}

.large-fonts,
.large-fonts .panel-heading .btn,
.large-fonts .form-control {
    font-size: 18px;
}

.large-fonts .panel-heading .btn {
    height: 36px;
}

.small-fonts,
.small-fonts .panel-heading .btn,
.small-fonts .form-control {
    font-size: 12px;
}

.small-fonts .panel-heading .btn {
    height: 30px;
}

span.checkmark {
    display: inline-block;
    width: 15px;
}

/*
 * textAngular custom CSS
 */

/*.ta-toolbar {*/
    /*display: none;*/
/*}*/

/*.ta-toolbar.focussed {*/
    /*display: block;*/
/*}*/

.ta-toolbar.btn-toolbar {
    margin-left: 0;
}

.entry-toolbar .btn-group,
.ta-toolbar .btn-group {
    float: right;
}

.ta-editor.ta-html, .ta-scroll-window.form-control {
    /*min-height: 34px;*/
    min-height: 28px;
}

.ta-editor p {
    margin-bottom: 0;
}

.ta-scroll-window > .ta-bind {
    /*min-height: 34px;*/
    min-height: 28px;
}

.locked .ta-root.focussed > .ta-scroll-window.form-control {
    border: 1px solid orangered;
    webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 69, 0, 0.6);
    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 69, 0, 0.6);
}

.locked-warning {
    position: absolute;
    z-index: 99;
    right: 5%;
    bottom: 15px;
}

/* for the textAngular toolbar buttons */
.red-text {
    color: red;
}

.green-text {
    color: green;
}

.blue-text {
    color: blue;
}

.orange-text {
    color: orange;
}

.grey-text {
    color: lightgrey;
}

.treatment-entry {
    position: relative;
}

.entry-toolbar,
.editor-toolbar {
    position: absolute;
    z-index: 90;
    right: 15px;
}

.entry-toolbar .btn-group,
.editor-toolbar .btn-group {
    background-color: white;
}

.entry-toolbar {
    top: -34px;
    width: 50px;
}

.editor-toolbar {
    bottom: -31px;
    width: 530px;
}

.achilles-widget {
    position: fixed;
    z-index: 101;
    box-shadow: #ccc 1px 1px 5px;
    box-sizing: border-box;
    padding: 0;
    background-color: white;
    border-radius: 5px;
}

.advanced-search-widget {
    width: 700px;
    top: 50px;
    left: 150px;
}

.advanced-search-widget .panel {
    margin-bottom: 0;
    padding-bottom: 10px;
}

.advanced-search-widget hr {
    margin-top: 5px;
    margin-bottom: 15px;
}

.title-settings-widget {
    width: 300px;
    /*position: fixed;*/
    top: 50px;
    right: 15px;
    /*z-index: 95;*/
    height: 80%;
    /*box-sizing: border-box;*/
    /*padding: 15px 0;*/
}

.title-settings-widget .panel{
    /*overflow-y: auto;*/
    height: 100%;
    box-sizing: border-box;
    padding-top: 115px;
}

.title-settings-widget .panel-heading {
    position: absolute;
    top: 0px;
    width: 99%;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
    z-index: 9;
}

.title-settings-widget .panel-body {
    position: absolute;
    z-index: 9;
    background-color: white;
    width: 99%;
    top: 40px;
    border-bottom: 1px solid #ddd;
}

.title-settings-widget .list-group {
    /*margin-top: 100px;*/
    max-height: 100%;
    overflow-y: auto;
}

.widget-controls {
    position: absolute;
    right: 3px;
    top: 3px;
}

.close-widget, .confirm-widget {
    background-repeat: no-repeat;
    background-size: 20px;
    width: 20px;
    height: 21px;
    background-position: center 35%;
}

.confirm-widget {
    background-position: center 2.5%;
}

.close-widget:hover, .confirm-widget:hover {
    background-position: center 66%;
}

.close-widget,
.close-widget:active {
    background-image: url('../images/icons/titlebar/icon-close.png');
}

.confirm-widget,
.confirm-widget:active {
    background-image: url('../images/icons/titlebar/icon-ok.png');
    background-size: 27px;
    width: 27px;
}

/*.confirm-widget,*/
/*.close-widget {*/
    /*position: absolute;*/
    /*z-index: 10;*/
    /*width: 38px;*/
/*}*/

/*.confirm-widget {*/
    /*right: 2px;*/
    /*bottom: 2px;*/
/*}*/

/*.close-widget {*/
    /*top: 2px;*/
    /*right: 2px;*/
/*}*/

.ui-draggable-handle {
    cursor: move;
}

.textblock-widget {
    /*width: 600px;*/
    top: 50px;
    left: 15px;
    height: auto;
    /*padding: 15px 0;*/
}

.textblock-widget .panel {
    margin-bottom: 3px;
}

.textblock-widget .panel:last-child {
    margin-bottom: 0;
}

.textblock-widget .panel-heading,
.textblock-widget .panel-body {
    position: relative;
}

.textblock-widget .form-group {
    margin-bottom: 0px;
}

.create-preset-widget {
    width: 250px;
    top: 250px;
    left: 50%;
    margin-left: -125px;
    z-index: 999;
}

.modal-wrapper {
    position: fixed;
    width: 100%;
    height: 100%;
    background: rgba(0,0,0,0.3);
    z-index: 998;
    top: 0;
}

.create-preset-widget .panel,
.preset-settings-widget .panel {
    margin-bottom: 0;
    padding-bottom: 10px;
}
/* ... */

